iptables.up.rules
# Generated by iptables-save v1.4.14 on Wed Aug 19 02:11:28 2015
*raw
:PREROUTING ACCEPT [1186094:516343599]
:OUTPUT ACCEPT [1179250:542514399]
COMMIT
# Completed on Wed Aug 19 02:11:28 2015
# Generated by iptables-save v1.4.14 on Wed Aug 19 02:11:28 2015
*nat
:PREROUTING ACCEPT [216:15042]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [125:7500]
-A POSTROUTING -j MASQUERADE
-A POSTROUTING -j MASQUERADE
COMMIT
# Completed on Wed Aug 19 02:11:28 2015
# Generated by iptables-save v1.4.14 on Wed Aug 19 02:11:28 2015
*mangle
:PREROUTING ACCEPT [1186094:516343599]
:INPUT ACCEPT [1185045:515979374]
:FORWARD ACCEPT [1007:360979]
:OUTPUT ACCEPT [1179250:542514399]
:POSTROUTING ACCEPT [1180257:542875378]
COMMIT
# Completed on Wed Aug 19 02:11:28 2015
# Generated by iptables-save v1.4.14 on Wed Aug 19 02:11:28 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [164:28944]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1723 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 7744 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 29727 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A INPUT -j DROP
-A FORWARD -j ACCEPT
-A OUTPUT -o ppp+ -j ACCEPT
-A OUTPUT -p gre -j ACCEPT
COMMIT
# Completed on Wed Aug 19 02:11:28 2015
